@@ -1,3 +1,9 @@
+2023-10-26 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* support/regression/tests/bug-3579.c,
+	  support/regression/tests/bug-3606.c:
+	  Fix reads from unitialized memory in regression tests, should fix bug #3617.
+
 2023-10-19 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* support/regression/tests/push_pop_sp.c: bug fix, remove unintended code
